compiler_errors.log
gcc -I/usr/include/gtk-3.0 -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/harfbuzz -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/fribidi -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/x86_64-linux-gnu -I/usr/include/webp -I/usr/include/gio-unix-2.0 -I/usr/include/atk-1.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -pthread  -I. stage1/root_gtk.c stage2/camera/camera.c stage2/input_controller/input_control.c stage2/interface/simulate/simulation.c stage2/interface/render/shader_loading.c stage2/interface/render/new_render.c stage2/interface/sphere_object/meshing/sphere_meshing.c stage2/interface/gui/gui.c stage3/boundary/boundary.c stage3/scene/scene_init.c stage3/timing_belt/frame_timer.c stage3/input_extension/mouse_lock.c stage4/interaction/spawner/object_spawner.c stage4/interaction/selector/object_selector.c stage4/broadphase/broadphase.c stage4/debug_overlay/overlay.c stage5/rendering/grid.c stage5/rendering/wireframe.c stage5/scene_io/scene_saving.c stage5/scene_io/scene_load.c stage5/constraints/spring_joint.c -lgtk-3 -lgdk-3 -lz -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lepoxy  -lm -o engine
In file included from stage1/root_gtk.c:6:
stage1/../stage5/master_header_5.h:9:10: fatal error: scene_io/scene_save.h: No such file or directory
    9 | #include "scene_io/scene_save.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
In file included from stage2/interface/simulate/simulation.c:5:
stage2/interface/simulate/../../../stage5/master_header_5.h:9:10: fatal error: scene_io/scene_save.h: No such file or directory
    9 | #include "scene_io/scene_save.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
In file included from /usr/include/epoxy/gl.h:89,
                 from stage5/rendering/wireframe.h:3,
                 from stage5/rendering/wireframe.c:1:
stage5/rendering/wireframe.c: In function ‘wireframe_render_selected_object’:
stage5/rendering/wireframe.c:14:5: error: too many arguments to function ‘epoxy_glUniform4fv’
   14 |     glUniform4fv (glGetUniformLocation (shader_program, "viewframe"), 1, GL_FALSE, view_array);
      |     ^~~~~~~~~~~~
stage5/rendering/wireframe.c:15:5: error: too many arguments to function ‘epoxy_glUniform4fv’
   15 |     glUniform4fv (glGetUniformLocation (shader_program, "projection"), 1, GL_FALSE, projection_array);
      |     ^~~~~~~~~~~~
stage5/rendering/wireframe.c:25:79: error: incompatible type for argument 4 of ‘epoxy_glUniform3f’
   25 |     glUniform3f (glGetUniformLocation (shader_program, "model"), 1, GL_FALSE, model_array);
      |                                                                               ^~~~~~~~~~~
      |                                                                               |
      |                                                                               float *
stage5/rendering/wireframe.c:25:79: note: expected ‘GLfloat’ {aka ‘float’} but argument is of type ‘float *’
stage5/scene_io/scene_load.c: In function ‘scene_loading’:
stage5/scene_io/scene_load.c:5:10: error: ‘source’ undeclared (first use in this function); did you mean ‘GSource’?
    5 |     if (!source) {fprintf (stderr, "Error LDF01: Loading File Error %s\n", file_src); return 0;}
      |          ^~~~~~
      |          GSource
stage5/scene_io/scene_load.c:5:10: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Makefile:28: engine] Error 1
